修改注解解释器追加import时的bug
Signed-off-by: zhouyu <zhouyu74748585@gmail.com>