@@ -48,14 +48,12 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
                 <configuration>
                     <source>11</source>
                     <target>11</target>
                     <showDeprecation>true</showDeprecation>
                     <showWarnings>true</showWarnings>
-                    <compilerArgs >
-                        <arg>--add-exports=mybatis-easy-go-processors/com.github.mybatis.easy.go.methodAnnotation=ALL-UNNAMED</arg>
-                    </compilerArgs >
                 </configuration>
             </plugin>
         </plugins>
